changes in Colab

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMONBVl05mVOY3Ik+uLLdNW",
+      "authorship_tag": "ABX9TyNRXvyJcXoYzwXrYzVxHjYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,20 +370,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Mutations**"
+        "# **FIND MORE BY CLICKING THE COLAB FILE [LINK](https://colab.research.google.com/drive/15vKJucspM_-zAEeCDrDYH3Gy6U6YuQF4#scrollTo=5vUP_seV5376)**"
       ],
       "metadata": {
         "id": "5vUP_seV5376"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bbGBr20357TW"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
