added Mutations ex

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRXvyJcXoYzwXrYzVxHjYj",
+      "authorship_tag": "ABX9TyPq86EnVcQhtBdu/VCkrtBe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,11 +370,75 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **FIND MORE BY CLICKING THE COLAB FILE [LINK](https://colab.research.google.com/drive/15vKJucspM_-zAEeCDrDYH3Gy6U6YuQF4#scrollTo=5vUP_seV5376)**"
+        "# **Mutations**"
       ],
       "metadata": {
-        "id": "5vUP_seV5376"
+        "id": "ZtvDmlcL8nvt"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mutate_string(string, position, character):\n",
+        "  string=list(string)\n",
+        "  string[position]=character\n",
+        "  string=''.join(string)\n",
+        "  return string"
+      ],
+      "metadata": {
+        "id": "FQx_4tMd8qmJ"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s=input()\n",
+        "i,c=input().split()\n",
+        "s_new=mutate_string(s,int(i),c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yEjh7PbJ9Lcu",
+        "outputId": "acf02ef6-a12f-4498-8177-59743258d96b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "abrackdabra\n",
+            "5 k \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(s_new)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ky7jGDuj9hzl",
+        "outputId": "39eb2e54-538c-4b17-cef4-62948ae0d26f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abrackdabra\n"
+          ]
+        }
+      ]
     }
   ]
 }
