added Find a string exercise

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq86EnVcQhtBdu/VCkrtBe",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPunkKI5/lKVx+G2DKcSFpx"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Dan-data-tech/HackerRank-Python/blob/main/HackerRankExercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -388,7 +377,7 @@
       "metadata": {
         "id": "FQx_4tMd8qmJ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +394,7 @@
         "id": "yEjh7PbJ9Lcu",
         "outputId": "acf02ef6-a12f-4498-8177-59743258d96b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -423,19 +412,105 @@
         "print(s_new)"
       ],
       "metadata": {
+        "id": "Ky7jGDuj9hzl",
+        "outputId": "39eb2e54-538c-4b17-cef4-62948ae0d26f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ky7jGDuj9hzl",
-        "outputId": "39eb2e54-538c-4b17-cef4-62948ae0d26f"
+        }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "abrackdabra\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Find a string**"
+      ],
+      "metadata": {
+        "id": "GXVHFPV2Y6Qt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_substring(string, sub_string):\n",
+        "  count=0\n",
+        "  for i in range(len(string)):\n",
+        "    if string[i:i+3] == sub_string:\n",
+        "      count+=1\n",
+        "  return count\n"
+      ],
+      "metadata": {
+        "id": "au-ZBssZY9du"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string = input().strip()\n",
+        "sub_string = input().strip()\n",
+        "\n",
+        "count = count_substring(string, sub_string)\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wWTe0YwmbPX9",
+        "outputId": "14d689fc-9be0-4380-b927-ce7a1000f8f0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABCDCDC\n",
+            "CDC\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string='ABCDCDC'\n",
+        "sub_string='CDC'\n",
+        "for i in range(len(string)):\n",
+        "   print(string[i:i+3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z6Upp0vqdbXO",
+        "outputId": "0fad5155-1e2b-4d6f-bacd-56f361bd119f"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABC\n",
+            "BCD\n",
+            "CDC\n",
+            "DCD\n",
+            "CDC\n",
+            "DC\n",
+            "C\n"
           ]
         }
       ]
