added String Validators ex

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPunkKI5/lKVx+G2DKcSFpx"
+      "authorship_tag": "ABX9TyOwRDlcVzUrMfziAuzB61bB"
     },
     "kernelspec": {
       "name": "python3",
@@ -435,7 +435,7 @@
         "# **Find a string**"
       ],
       "metadata": {
-        "id": "GXVHFPV2Y6Qt"
+        "id": "Fd5tuP1CE1PS"
       }
     },
     {
@@ -446,12 +446,12 @@
         "  for i in range(len(string)):\n",
         "    if string[i:i+3] == sub_string:\n",
         "      count+=1\n",
-        "  return count\n"
+        "  return count"
       ],
       "metadata": {
-        "id": "au-ZBssZY9du"
+        "id": "eDJ4bljAE5rN"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,10 +467,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wWTe0YwmbPX9",
-        "outputId": "14d689fc-9be0-4380-b927-ce7a1000f8f0"
+        "id": "hbr7a5fDE8m4",
+        "outputId": "8fc6cd4a-776a-4000-d75d-1301fcab21c2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,10 +495,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "z6Upp0vqdbXO",
-        "outputId": "0fad5155-1e2b-4d6f-bacd-56f361bd119f"
+        "id": "d3wNs8soE9Vz",
+        "outputId": "b2cf59c1-8188-43a7-e335-b6257e784d60"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,6 +511,81 @@
             "CDC\n",
             "DC\n",
             "C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **String Validators**"
+      ],
+      "metadata": {
+        "id": "HGMM2-mzPMUZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S = input()\n",
+        "count_alnum = 0\n",
+        "count_alpha = 0\n",
+        "count_digit = 0\n",
+        "count_lower = 0\n",
+        "count_upper = 0\n",
+        "\n",
+        "for char in S:\n",
+        "  if char.isalnum():\n",
+        "    count_alnum+=1\n",
+        "  if char.isalpha():\n",
+        "    count_alpha+=1\n",
+        "  if char.isdigit():\n",
+        "    count_digit+=1\n",
+        "  if char.islower():\n",
+        "    count_lower+=1\n",
+        "  if char.isupper():\n",
+        "    count_upper+=1\n",
+        "\n",
+        "if count_alnum > 0:\n",
+        "  print('True')\n",
+        "else:\n",
+        "  print('False')\n",
+        "if count_alpha > 0:\n",
+        "  print('True')\n",
+        "else:\n",
+        "  print('False')\n",
+        "if count_digit > 0:\n",
+        "  print('True')\n",
+        "else:\n",
+        "  print('False')\n",
+        "if count_lower > 0:\n",
+        "  print('True')\n",
+        "else:\n",
+        "  print('False')\n",
+        "if count_upper > 0:\n",
+        "  print('True')\n",
+        "else:\n",
+        "  print('False')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vZ_UVbSlQTrE",
+        "outputId": "baa250ff-a657-4f96-9f7f-245cdbf05f53"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "qA2\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n"
           ]
         }
       ]
