--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwRDlcVzUrMfziAuzB61bB"
+      "authorship_tag": "ABX9TyPdZdoDPn4DGazrCAjOxN2y"
     },
     "kernelspec": {
       "name": "python3",
@@ -203,7 +203,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tuples"
+        "# **Tuples**"
       ],
       "metadata": {
         "id": "Rt3yAwHuOeE6"
@@ -574,7 +574,7 @@
         "id": "vZ_UVbSlQTrE",
         "outputId": "baa250ff-a657-4f96-9f7f-245cdbf05f53"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,6 +586,83 @@
             "True\n",
             "True\n",
             "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Test Alignment**"
+      ],
+      "metadata": {
+        "id": "tXJ2vWWlRpfP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "thickness = int(input())  # This can be any odd number\n",
+        "c = 'H'\n",
+        "\n",
+        "# Top Cone\n",
+        "for i in range(thickness):\n",
+        "    print((c*i).rjust(thickness-1) + c + (c*i).ljust(thickness-1))\n",
+        "\n",
+        "# Top Pillars\n",
+        "for i in range(thickness+1):\n",
+        "    print((c*thickness).center(thickness*2) + (c*thickness).center(thickness*6))\n",
+        "\n",
+        "# Middle Belt\n",
+        "for i in range((thickness+1)//2):\n",
+        "    print((c*thickness*5).center(thickness*6))\n",
+        "\n",
+        "# Bottom Pillars\n",
+        "for i in range(thickness+1):\n",
+        "    print((c*thickness).center(thickness*2) + (c*thickness).center(thickness*6))\n",
+        "\n",
+        "# Bottom Cone\n",
+        "for i in range(thickness):\n",
+        "    print(((c*(thickness-i-1)).rjust(thickness) + c + (c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bghh58B3Ruqe",
+        "outputId": "52c88e6a-aead-4fea-ab70-1538ccb4cae9"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    H    \n",
+            "   HHH   \n",
+            "  HHHHH  \n",
+            " HHHHHHH \n",
+            "HHHHHHHHH\n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+            "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+            "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "  HHHHH               HHHHH             \n",
+            "                    HHHHHHHHH \n",
+            "                     HHHHHHH  \n",
+            "                      HHHHH   \n",
+            "                       HHH    \n",
+            "                        H     \n"
           ]
         }
       ]
