--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdZdoDPn4DGazrCAjOxN2y"
+      "authorship_tag": "ABX9TyODrpHRaui2SH8hU7nWfEbI"
     },
     "kernelspec": {
       "name": "python3",
@@ -623,7 +623,7 @@
         "\n",
         "# Bottom Cone\n",
         "for i in range(thickness):\n",
-        "    print(((c*(thickness-i-1)).rjust(thickness) + c + (c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))\n"
+        "    print(6((c*(thickness-i-1)).rjust(thickness) + c + (c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))\n"
       ],
       "metadata": {
         "colab": {
@@ -632,7 +632,7 @@
         "id": "bghh58B3Ruqe",
         "outputId": "52c88e6a-aead-4fea-ab70-1538ccb4cae9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,6 +663,64 @@
             "                      HHHHH   \n",
             "                       HHH    \n",
             "                        H     \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Text Wrap**"
+      ],
+      "metadata": {
+        "id": "O4x__LA2oBDW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import textwrap\n",
+        "\n",
+        "def wrap(string, max_width):\n",
+        "  wrapped_text = textwrap.fill(string,max_width)\n",
+        "  return wrapped_text\n",
+        ""
+      ],
+      "metadata": {
+        "id": "VTZ3uE-7oEba"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string, max_width = input(), int(input())\n",
+        "result = wrap(string, max_width)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W7XknZlro0FK",
+        "outputId": "2d04f096-e675-4834-e657-0124f74a0de4"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABCDEFGHIJKLIMNOQRSTUVWXYZ\n",
+            "4\n",
+            "ABCD\n",
+            "EFGH\n",
+            "IJKL\n",
+            "IMNO\n",
+            "QRST\n",
+            "UVWX\n",
+            "YZ\n"
           ]
         }
       ]
