--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODrpHRaui2SH8hU7nWfEbI"
+      "authorship_tag": "ABX9TyNTemiKVHaGBJF7Rdu3hzQl"
     },
     "kernelspec": {
       "name": "python3",
@@ -683,13 +683,12 @@
         "\n",
         "def wrap(string, max_width):\n",
         "  wrapped_text = textwrap.fill(string,max_width)\n",
-        "  return wrapped_text\n",
-        ""
+        "  return wrapped_text\n"
       ],
       "metadata": {
         "id": "VTZ3uE-7oEba"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +705,7 @@
         "id": "W7XknZlro0FK",
         "outputId": "2d04f096-e675-4834-e657-0124f74a0de4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,6 +720,64 @@
             "QRST\n",
             "UVWX\n",
             "YZ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Designer Door Mat**"
+      ],
+      "metadata": {
+        "id": "nQzMLpbHZnpJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prime = [x for x in range(101) if x % 2 != 0]"
+      ],
+      "metadata": {
+        "id": "q9o3kFbQrQHb"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "N, M = map(int,input().split())\n",
+        "\n",
+        "for i in range(N//2):\n",
+        "  print(('.|.'*(prime[i])).center(M,'-'))\n",
+        "print('WELCOME'.center(M,'-'))\n",
+        "for i in range(N//2-1,-1,-1):\n",
+        "  print(('.|.'*(prime[i])).center(M,'-'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZN5I34R1ZsI3",
+        "outputId": "bda7fb89-fc1e-4809-e5c3-83ec95653347"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 27\n",
+            "------------.|.------------\n",
+            "---------.|..|..|.---------\n",
+            "------.|..|..|..|..|.------\n",
+            "---.|..|..|..|..|..|..|.---\n",
+            "----------WELCOME----------\n",
+            "---.|..|..|..|..|..|..|.---\n",
+            "------.|..|..|..|..|.------\n",
+            "---------.|..|..|.---------\n",
+            "------------.|.------------\n"
           ]
         }
       ]
