--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTemiKVHaGBJF7Rdu3hzQl"
+      "authorship_tag": "ABX9TyOLzDabnBAejM4qNsFbonOX"
     },
     "kernelspec": {
       "name": "python3",
@@ -741,7 +741,7 @@
       "metadata": {
         "id": "q9o3kFbQrQHb"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
         "id": "ZN5I34R1ZsI3",
         "outputId": "bda7fb89-fc1e-4809-e5c3-83ec95653347"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,6 +778,74 @@
             "------.|..|..|..|..|.------\n",
             "---------.|..|..|.---------\n",
             "------------.|.------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **String Formatting**"
+      ],
+      "metadata": {
+        "id": "ztzIoJCFnUBG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_formatted(number):\n",
+        "  width = len(bin(number)[2:])\n",
+        "  for i in range(1,number + 1):\n",
+        "    decimal = str(i).rjust(width)\n",
+        "    octal = oct(i)[2:].rjust(width)\n",
+        "    hexadecimal = hex(i)[2:].upper().rjust(width)\n",
+        "    binary = bin(i)[2:].rjust(width)\n",
+        "    print(decimal,octal,hexadecimal,binary)"
+      ],
+      "metadata": {
+        "id": "HL0gXr7VnS8r"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's try\n",
+        "number = 17\n",
+        "print_formatted(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CwBHuuwopU34",
+        "outputId": "439de59d-0c40-47a8-d923-4a852f3017c8"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    1     1     1     1\n",
+            "    2     2     2    10\n",
+            "    3     3     3    11\n",
+            "    4     4     4   100\n",
+            "    5     5     5   101\n",
+            "    6     6     6   110\n",
+            "    7     7     7   111\n",
+            "    8    10     8  1000\n",
+            "    9    11     9  1001\n",
+            "   10    12     A  1010\n",
+            "   11    13     B  1011\n",
+            "   12    14     C  1100\n",
+            "   13    15     D  1101\n",
+            "   14    16     E  1110\n",
+            "   15    17     F  1111\n",
+            "   16    20    10 10000\n",
+            "   17    21    11 10001\n"
           ]
         }
       ]
