added rangoli ex

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLzDabnBAejM4qNsFbonOX"
+      "authorship_tag": "ABX9TyNwDZY9faAjvciUpFhuGj/L"
     },
     "kernelspec": {
       "name": "python3",
@@ -806,7 +806,7 @@
       "metadata": {
         "id": "HL0gXr7VnS8r"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -823,7 +823,7 @@
         "id": "CwBHuuwopU34",
         "outputId": "439de59d-0c40-47a8-d923-4a852f3017c8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,6 +846,76 @@
             "   15    17     F  1111\n",
             "   16    20    10 10000\n",
             "   17    21    11 10001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Alphabet Rangoli**"
+      ],
+      "metadata": {
+        "id": "wwvhjF8_2sY7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_rangoli(size):\n",
+        "  alpha = 'abcdefghijklmnopqrstuvwxyz'\n",
+        "\n",
+        "  for i in range(size-1, -1, -1):\n",
+        "    s = '-'.join(alpha[i:size])\n",
+        "    print(((s[::-1] + s[1:]).center(4*size-3,'-')))\n",
+        "  for i in range(1,size):\n",
+        "    s = '-'.join(alpha[i:size])\n",
+        "    print(((s[::-1] + s[1:]).center(4*size-3,'-')))"
+      ],
+      "metadata": {
+        "id": "m_0YJNLr2yDL"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's try size of 10\n",
+        "print_rangoli(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EZnfaO3s3Pc6",
+        "outputId": "5c929141-f196-4f6b-ea6a-e56464af81ca"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "------------------j------------------\n",
+            "----------------j-i-j----------------\n",
+            "--------------j-i-h-i-j--------------\n",
+            "------------j-i-h-g-h-i-j------------\n",
+            "----------j-i-h-g-f-g-h-i-j----------\n",
+            "--------j-i-h-g-f-e-f-g-h-i-j--------\n",
+            "------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
+            "----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
+            "--j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
+            "j-i-h-g-f-e-d-c-b-a-b-c-d-e-f-g-h-i-j\n",
+            "--j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
+            "----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
+            "------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
+            "--------j-i-h-g-f-e-f-g-h-i-j--------\n",
+            "----------j-i-h-g-f-g-h-i-j----------\n",
+            "------------j-i-h-g-h-i-j------------\n",
+            "--------------j-i-h-i-j--------------\n",
+            "----------------j-i-j----------------\n",
+            "------------------j------------------\n"
           ]
         }
       ]
