added nested if

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwDZY9faAjvciUpFhuGj/L"
+      "authorship_tag": "ABX9TyPd//rtU81p7xhR2LTP4T3W"
     },
     "kernelspec": {
       "name": "python3",
@@ -875,7 +875,7 @@
       "metadata": {
         "id": "m_0YJNLr2yDL"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -891,7 +891,7 @@
         "id": "EZnfaO3s3Pc6",
         "outputId": "5c929141-f196-4f6b-ea6a-e56464af81ca"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,6 +916,59 @@
             "--------------j-i-h-i-j--------------\n",
             "----------------j-i-j----------------\n",
             "------------------j------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Python if-Else**"
+      ],
+      "metadata": {
+        "id": "N92PKZKyygzZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_print(n):\n",
+        "  if n%2!=0:\n",
+        "    print(\"Weird\")\n",
+        "  elif n%2==0 and 2<=n<=5:\n",
+        "    print('Not Weird')\n",
+        "  elif n%2==0 and 6<=n<=20:\n",
+        "    print('Weird')\n",
+        "  elif n%2==0 and n>20:\n",
+        "    print('Not Weird')"
+      ],
+      "metadata": {
+        "id": "eOQ5Iyfzynf1"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input().strip())\n",
+        "find_print(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "frrQEeVLzgtj",
+        "outputId": "d0e6b035-731a-417f-cbd0-6582099c90df"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24\n",
+            "Not Weird\n"
           ]
         }
       ]
