added nested lists

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd//rtU81p7xhR2LTP4T3W"
+      "authorship_tag": "ABX9TyPjoK8TSfZilmlhQK1cK6X8"
     },
     "kernelspec": {
       "name": "python3",
@@ -945,7 +945,7 @@
       "metadata": {
         "id": "eOQ5Iyfzynf1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -961,7 +961,7 @@
         "id": "frrQEeVLzgtj",
         "outputId": "d0e6b035-731a-417f-cbd0-6582099c90df"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -969,6 +969,69 @@
           "text": [
             "24\n",
             "Not Weird\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Nested Lists**"
+      ],
+      "metadata": {
+        "id": "za-Pz5bjLiQk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = []\n",
+        "n = []\n",
+        "l = []\n",
+        "for _ in range(int(input())):\n",
+        " name = input()\n",
+        " score = float(input())\n",
+        " s.append(score)\n",
+        " n.append([name,score])\n",
+        "\n",
+        "s = list(set(s))\n",
+        "s.sort()\n",
+        "second_lowest= s[1]\n",
+        "\n",
+        "for i in range(len(n)):\n",
+        "  if n[i][1] == second_lowest:\n",
+        "    l.append(n[i][0])\n",
+        "l.sort()\n",
+        "for _ in l:\n",
+        "  print(_)"
+      ],
+      "metadata": {
+        "id": "25QHKkZTLlxw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "91ff02c0-7857-4091-d48e-78b287e2505a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "Harry\n",
+            "37.21\n",
+            "Berry\n",
+            "37.21\n",
+            "Tina\n",
+            "37.2\n",
+            "Akriti\n",
+            "41\n",
+            "Harsh\n",
+            "39\n",
+            "Berry\n",
+            "Harry\n"
           ]
         }
       ]
