added string split and join ex

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjoK8TSfZilmlhQK1cK6X8"
+      "authorship_tag": "ABX9TyN2Srvqjeewn/Lv/z9S2d16"
     },
     "kernelspec": {
       "name": "python3",
@@ -1010,10 +1010,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "outputId": "91ff02c0-7857-4091-d48e-78b287e2505a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,6 +1031,80 @@
             "39\n",
             "Berry\n",
             "Harry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products = ('1','2','3','5','6')\n",
+        "tester = slice(1,4,2)\n",
+        "print(products[tester])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R0876QpAn__a",
+        "outputId": "421a2a10-e8bb-48f7-cd91-2747a786b2e1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('2', '5')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **String Split and Join**"
+      ],
+      "metadata": {
+        "id": "tKqvL8eYIted"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_and_join(line):\n",
+        "  line = line.split()\n",
+        "  line = '-'.join(line)\n",
+        "  return line"
+      ],
+      "metadata": {
+        "id": "ZU-Ck8TvJgu-"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "line = input()\n",
+        "result = split_and_join(line)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WNXEOIrQJvSW",
+        "outputId": "783cd8a5-8686-4363-8d7d-708d084fba32"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "this is a string \n",
+            "this-is-a-string\n"
           ]
         }
       ]
