added capitalize ex

--- a/HackerRankExercises.ipynb
+++ b/HackerRankExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2Srvqjeewn/Lv/z9S2d16"
+      "authorship_tag": "ABX9TyPtAt5ASBxx7QRruNARSepY"
     },
     "kernelspec": {
       "name": "python3",
@@ -1080,7 +1080,7 @@
       "metadata": {
         "id": "ZU-Ck8TvJgu-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1097,7 @@
         "id": "WNXEOIrQJvSW",
         "outputId": "783cd8a5-8686-4363-8d7d-708d084fba32"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1106,6 +1106,65 @@
             "this is a string \n",
             "this-is-a-string\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Capitalize!**"
+      ],
+      "metadata": {
+        "id": "Q9kFxFqSbvuU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def solve(s):\n",
+        "  s = list(s)\n",
+        "  for i in range(len(s)):\n",
+        "    if i == 0:\n",
+        "      s[i] = s[i].upper()\n",
+        "    if s[i] == ' ' :\n",
+        "      s[i+1] = s[i+1].upper()\n",
+        "  s = ''.join(s)\n",
+        "  return s"
+      ],
+      "metadata": {
+        "id": "yfYsSi0jcQh2"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = 'hello    world' #watch out for the spaces trick\n",
+        "solve(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "GWZgLVnBqXGd",
+        "outputId": "1a7fee24-e540-4395-81ee-309d9e71ee3e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello    World'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
